--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "bbo-discord-bot",
   "version": "1.0.0",
   "description": "a temp vc bot for bbo",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
