pulling from test

--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "Category": "751266531597353040",
     "VcOne": "751266533702893578",
     "VcTwo": "751269940887289876",
-    "VcThree": "751269309065461820"
+    "VcThree": "751269309065461820",
+    "LeaderRoleId": "851722247206600704"
     }
