--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "fs": "^0.0.1-security"
+    "fs": "0.0.1-security"
   }
 }
