--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@discordjs/voice": "^0.8.0",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "dotenv": "16.0.0",
+    "ejs": "3.1.8",
+    "express": "4.17.3",
     "fs": "0.0.1-security"
   }
 }
