--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "",
+  "author": "Foggy",
   "license": "ISC",
   "keywords": [],
   "dependencies": {
