--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "bbo-discord-bot",
+  "name": "bbo-dc-bot",
   "version": "1.0.0",
   "description": "a dc bot for bbo",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js"
+    "start": "ts-node index.ts"
+
   },
   "author": "Foggy",
   "license": "ISC",
@@ -12,9 +13,25 @@
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
     "@discordjs/voice": "^0.8.0",
+    "discord-api-types": "^0.37.0",
     "discord.js": "^13.6.0",
     "dotenv": "16.0.0",
     "express": "4.17.3",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "ts-node": "^10.9.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FoggY9/bbo-discord-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FoggY9/bbo-discord-bot/issues"
+  },
+  "homepage": "https://github.com/FoggY9/bbo-discord-bot#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.3",
+    "nodemon": "^2.0.19",
+    "typescript": "^4.7.4"
   }
 }
