--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bbo-dc-bot",
-  "version": "1.0.0",
+  "name": "Bonkhalla",
+  "version": "2.0.0",
   "description": "a dc bot for bbo",
   "main": "index.ts",
   "scripts": {
