--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "bonkhalla",
   "version": "2.0.0",
   "description": "a dc bot for bbo",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "ts-node src/index.ts",
+    "nodestart": "node output/index.js"
   },
   "author": "Foggy",
   "license": "ISC",
@@ -17,7 +18,6 @@
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "fs": "0.0.1-security",
-    "smartestchatbot": "^2.0.3",
     "ts-node": "^10.9.1"
   },
   "repository": {
