--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "nodestart": "node output/index.js"
+    "nstart": "node output/index.js"
   },
   "author": "Foggy",
   "license": "ISC",
